# camera_design

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: dwg.py  layout.py  projects.py  recognition.py
backend/app/models/: cad.py  layout.py  project.py
backend/app/services/: cad_geometry.py  dwg_importer.py  exporter.py  geometry.py  layout_solver.py  recognition.py  storage.py
backend/tests/: test_dwg_api.py  test_dwg_importer.py  test_exporter.py  test_health.py  test_layout_solver.py  test_projects_api.py  test_recognition.py
backend/tests/fixtures/: block_room.dwg  dwgread_simple_room.json  simple_room.dwg
docs/superpowers/plans/: 2026-04-09-camera-layout-implementation.md
docs/superpowers/specs/: 2026-04-09-camera-layout-design.md  2026-04-15-dwg-camera-layout-design.md
docs/validation/: sample-results.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/features/workbench/: types.ts
frontend/src/features/workbench/components/: ControlsPanel.tsx  InspectorPanel.tsx  PlanCanvas.tsx  ResultsSummary.tsx  UploadPanel.tsx  WorkbenchPage.test.tsx  WorkbenchPage.tsx
frontend/src/features/workbench/lib/: coverage.test.ts  coverage.ts  exportPlan.ts
frontend/src/features/workbench/state/: projectReducer.test.ts  projectReducer.ts
frontend/src/styles/: global.css
