[project]
name = "cad-backend"
version = "0.1.0"
description = "Backend service for the CAD project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "ezdwg>=0.8.1",
    "Pillow",
    "python-multipart",
    "uvicorn",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
